Author : Florent BREHERET
Contact : florentbr@gmail.com
Website : http://code.google.com/p/selenium-vba


v1.0.13.4 (2013/)
===============================================================================
 * Fixed screen capture for remote driver
 * Updated Chrome driver to 2.1
 * Rebuild of templates and examples
 * Fixed regression on the exe.config file

v1.0.13.3 (2013/05/23)
===============================================================================
 * Updated Selenium libraries to 2.33.0
 * Updated IEDriverServer to 2.33.0
 * Fixed temporary file cleaning
 * Set templates and examples to trusted locations
 * Code re-factoring
 
v1.0.12.0 (2013/05/04)
===============================================================================
 * Updated Selenium libraries to 2.32.1
 * Updated IEDriverServer to 2.32.3
 * Updated Chrome driver to 0.8
 * Updated PhantomJs to 1.9
 * Fixed setProxy method

v1.0.11.1 (2013/03/06)
===============================================================================
 * Updated Selenium libraries to 2.31.2

v1.0.11.0 (2013/03/05)
===============================================================================
 * Updated Selenium libraries to 2.31.1
 * Updated PhantomJS to 1.8.2
 * Fixed path installation for Office 2010
 
v1.0.10.0 (2013/02/19)
===============================================================================
 * Updated Selenium libraries to 2.30.1
 * Updated IEDriverServer to 2.30.0
 * Added methods switchToAlert, switchToFrame, switchToWindow
 * Added actions chained methods
 * Extended the cancellation when the ESC key is pressed

v1.0.9.0 (2013/02/04)
===============================================================================
 * Added the PhantomJS headless web driver
 * Updated Chrome Driver to version 26.0.1383
 * Updated Selenium libraries to 2.29.1
 * Updated IEDriverServer to 2.29.0
 * Added setProxy, setProfile and setCapability methodes
 * Added selenium 2 methodes
 * Fixed Firefox Addon installation